# BabelWires-Music

./: CMakeLists.txt  TODO.md
Docs/: TODO.md
MusicLib/: CMakeLists.txt  chord.cpp  chord.hpp  libRegistration.cpp  libRegistration.hpp  musicLibExport.hpp  musicTypes.hpp  pitch.cpp  pitch.hpp
MusicLib/Functions/: accompanimentSequencerFunction.cpp  accompanimentSequencerFunction.hpp  appendTrackFunction.cpp  appendTrackFunction.hpp  excerptFunction.cpp  excerptFunction.hpp  fingeredChordsFunction.cpp  fingeredChordsFunction.hpp  fitToChordFunction.cpp  fitToChordFunction.hpp  getChordTypesFunction.cpp  getChordTypesFunction.hpp  getSetOfChordTypesFunction.cpp  getSetOfChordTypesFunction.hpp  mapChordsFunction.cpp  mapChordsFunction.hpp  mergeFunction.cpp  mergeFunction.hpp  monophonicSubtracksFunction.cpp  monophonicSubtracksFunction.hpp  percussionMapFunction.cpp  percussionMapFunction.hpp  quantizeFunction.cpp  quantizeFunction.hpp  repeatFunction.cpp  repeatFunction.hpp  splitAtPitchFunction.cpp  splitAtPitchFunction.hpp  transposeFunction.cpp  transposeFunction.hpp
MusicLib/Percussion/: builtInPercussionInstruments.cpp  builtInPercussionInstruments.hpp  percussionSetWithPitchMap.cpp  percussionSetWithPitchMap.hpp  percussionTypeTag.cpp  percussionTypeTag.hpp
MusicLib/Processors/: accompanimentSequencerProcessor.cpp  accompanimentSequencerProcessor.hpp  buildAccompanimentProcessor.cpp  buildAccompanimentProcessor.hpp  chordMapProcessor.cpp  chordMapProcessor.hpp  concatenateProcessor.cpp  concatenateProcessor.hpp  excerptProcessor.cpp  excerptProcessor.hpp  fingeredChordsProcessor.cpp  fingeredChordsProcessor.hpp  fitToChordsProcessor.cpp  fitToChordsProcessor.hpp  getChordTypesProcessor.cpp  getChordTypesProcessor.hpp  mergeProcessor.cpp  mergeProcessor.hpp  monophonicSubtracksProcessor.cpp  monophonicSubtracksProcessor.hpp  percussionMapProcessor.cpp  percussionMapProcessor.hpp  quantizeProcessor.cpp  quantizeProcessor.hpp  repeatProcessor.cpp  repeatProcessor.hpp  silenceProcessor.cpp  silenceProcessor.hpp  splitAtPitchProcessor.cpp  splitAtPitchProcessor.hpp  transposeProcessor.cpp  transposeProcessor.hpp
MusicLib/Types/: chordSetType.cpp  chordSetType.hpp  chordTypeSet.cpp  chordTypeSet.hpp  duration.hpp  genericAccompaniment.cpp  genericAccompaniment.hpp  tempo.hpp
MusicLib/Utilities/: filteredTrackIterator.hpp  filteredTrackIterator_inl.hpp  monophonicNoteIterator.cpp  monophonicNoteIterator.hpp  musicUtilities.cpp  musicUtilities.hpp  trackBuilder.cpp  trackTraverser.hpp  trackValidator.cpp  trackValidator.hpp  validTrackBuilder.cpp  validTrackBuilder.hpp
MusicLibUi/: CMakeLists.txt  libRegistration.cpp  libRegistration.hpp  musicLibUiExport.hpp
MusicLibUi/ValueModels/: trackValueModel.cpp  trackValueModel.hpp
Plugins/Smf/Plugin/: CMakeLists.txt  gmSpec.cpp  gmSpec.hpp  libRegistration.cpp  libRegistration.hpp  midiChannel.cpp  midiChannel.hpp  midiMetadata.cpp  midiMetadata.hpp  midiTrackAndChannel.cpp  midiTrackAndChannel.hpp  midiTrackAndChannelArray.cpp  midiTrackAndChannelArray.hpp  recordOfMidiTracks.cpp  recordOfMidiTracks.hpp  smfFormat.cpp  smfFormat.hpp  smfLibExport.hpp  smfParser.cpp  smfParser.hpp  smfSequence.cpp  smfSequence.hpp  smfWriter.cpp  smfWriter.hpp
Plugins/Smf/Plugin/Percussion/: gm2AnalogPercussionSet.cpp  gm2AnalogPercussionSet.hpp  gm2BrushPercussionSet.cpp  gm2BrushPercussionSet.hpp  gm2ElectronicPercussionSet.cpp  gm2ElectronicPercussionSet.hpp  gm2JazzPercussionSet.cpp  gm2JazzPercussionSet.hpp  gm2OrchestraPercussionSet.cpp  gm2OrchestraPercussionSet.hpp  gm2PowerPercussionSet.cpp  gm2PowerPercussionSet.hpp  gm2RoomPercussionSet.cpp  gm2RoomPercussionSet.hpp  gm2SFXPercussionSet.cpp  gm2SFXPercussionSet.hpp  gm2StandardPercussionSet.cpp  gm2StandardPercussionSet.hpp  gmPercussionSet.cpp  gmPercussionSet.hpp  gs808909PercussionSet.cpp  gs808909PercussionSet.hpp  gsBrushPercussionSet.cpp  gsBrushPercussionSet.hpp  gsElectronicPercussionSet.cpp  gsElectronicPercussionSet.hpp  gsJazzPercussionSet.cpp  gsJazzPercussionSet.hpp  gsOrchestraPercussionSet.cpp  gsOrchestraPercussionSet.hpp  gsPowerPercussionSet.cpp  gsPowerPercussionSet.hpp  gsRoomPercussionSet.cpp  gsRoomPercussionSet.hpp  gsSFXPercussionSet.cpp  gsSFXPercussionSet.hpp  gsStandard1PercussionSet.cpp  gsStandard1PercussionSet.hpp  standardPercussionSets.cpp  standardPercussionSets.hpp  (+20 more)
Plugins/Smf/Tests/: CMakeLists.txt  percussionTests.cpp  sampleProjectLoadTest.cpp  saveLoadTests.cpp  smfTests.cpp  testSuiteTests.cpp
Plugins/TestPlugin/: CMakeLists.txt  libRegistration.cpp  libRegistration.hpp  pluginEntry.cpp  simpleAccompaniment.cpp  simpleAccompaniment.hpp  testPluginLibExport.hpp  testTrackContainer.cpp  testTrackContainer.hpp
Seq2tapeExe/: CMakeLists.txt  seq2tape.cpp  seq2tapeOptions.cpp  seq2tapeOptions.hpp
Seq2tapeExe/Alsa/: alsaAudioDest.cpp  alsaAudioDest.hpp  alsaAudioInterface.cpp  alsaAudioInterface.hpp  alsaAudioSource.cpp  alsaAudioSource.hpp  alsaCommon.cpp  alsaCommon.hpp
Seq2tapeLib/: CMakeLists.txt  sampleReader.hpp  seq2tapeContext.hpp  seq2tapeLibExport.hpp  tapeFile.cpp  tapeFile.hpp  tapeFileFormat.hpp  waveReader.hpp
Seq2tapeLib/Audio/: audioDest.hpp  audioInterface.cpp  audioInterface.hpp  audioSource.hpp
Seq2tapeLib/Audio/FileAudio/: fileAudioDest.cpp  fileAudioDest.hpp  fileAudioSource.cpp  fileAudioSource.hpp
Tests/MusicLib/: CMakeLists.txt  accompanimentSequencerTest.cpp  buildAccompanimentTest.cpp  chordMapProcessorTest.cpp  chordTypeSetTest.cpp  concatenateProcessorTest.cpp  excerptProcessorTest.cpp  filteredTrackIteratorTest.cpp  fingeredChordsProcessorTest.cpp  fitToChordFunctionTest.cpp  getChordTypesProcessorTest.cpp  mergeProcessorTest.cpp  monophonicNoteIteratorTest.cpp  monophonicSubtracksProcessorTest.cpp  musicTypesTest.cpp  musicUtilitiesTest.cpp  percussionMapProcessorTest.cpp  percussionSetWithPitchMapTest.cpp  quantizeProcessorTest.cpp  repeatProcessorTest.cpp  splitAtPitchProcessorTest.cpp  trackBuilderTest.cpp  trackTest.cpp  trackTraverserTest.cpp  trackTypeTest.cpp  transposeProcessorTest.cpp
(+115 files in other folders)
